fix: image width on mobile

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,6 +1,8 @@
 @import '/node_modules/modern-normalize//modern-normalize.css';
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif;
   background-image: linear-gradient(35deg, #10031a, #03062c);
 }
