--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  // grid-auto-rows: auto;
+  grid-auto-rows: 240px;
   grid-auto-flow: dense;
   gap: 15px;
 }
